Fix: Corrects responsiveness on small screen.

--- a/style.css
+++ b/style.css
@@ -110,9 +110,15 @@ body{
 .card:hover .project-video{
   filter: opacity(100%);
 }
+.heading1{
+  font-size: 4.5rem !important;
+}
+.heading2{
+  font-size: 4.2rem !important;
+}
 
 @media  screen and (max-width :600px){
-  .heading1,heading2{
+  .heading1,.heading2{
     font-size: 3.5rem !important;
   }
   
